[project]
name = "nonebot-kisaragirin"
version = "0.1.0"
description = "nonebot-kisaragirin是一个nonebot插件，提供了一个基于大语言模型的智能聊天助手，能够在群聊中与用户进行自然语言交互，提供信息查询、图片描述、工具调用等功能。"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "nonebot2[fastapi]>=2.4.4",
    "nonebot2[httpx]>=2.4.4",
    "nonebot2[websockets]>=2.4.4",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-adapter-telegram>=0.1.0b20",
    "nb-cli>=1.7.0",
    "openai>=2.21.0",
    "kisaragirin",
]

[tool.nonebot]
plugin_dirs = ["zfnbot/plugins/"]
builtin_plugins = []

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
nonebot-adapter-telegram = [
    { name = "Telegram", module_name = "nonebot.adapters.telegram" }
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []

[tool.uv.sources]
kisaragirin = { path = "kisaragirin", editable = true }

[tool.basedpyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
include = ["bot.py", "test.py", "zfnbot", "kisaragirin"]
extraPaths = ["kisaragirin"]

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
