[project]
name = "kisaragirin"
version = "0.1.0"
description = "LangGraph-based reusable agent package with short/long-term memory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.4.0",
    "exa-py>=1.15.0",
    "langchain-openai>=0.3.9",
    "langchain-siliconflow>=0.1.0",
    "langgraph>=1.0.9",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kisaragirin"]
